openshift-ppc64le/servicemesh/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  # dedicated control plane for kubeflow only
  name: istio-system
