openshift-ppc64le/servicemesh/allow-apiserver-webhooks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apiserver-webhooks
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: 
      - admission-webhook
      - cache-server
      - seldon
      - katib-controller
      - kfserving
      - poddefaults
  ingress:
    - ports:
      - port: 443
        protocol: TCP   
      - port: 8443
        protocol: TCP 
      - port: 9443
        protocol: TCP
      - port: 4443
        protocol: TCP
